Report endpointy zmienione.
